test/inplace/kustomization.yaml

apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

bases:
  - github.com/istio/installer/kustomize/istio-ingress
